tests/miniJava/neg/005842_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { Main if ( 0 ) { } else { } } }
